# inclusion-connect

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  Procfile  README.md  cron.json  docker-compose.yml  manage.py  password_decode.py  pyproject.toml  pytest.ini  requirements.txt  restore-backup.py  setup.cfg  uwsgi-scalingo.ini
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  deploy-to-scalingo.yml
clevercloud/: cron.json  pre_build.sh  pre_run.sh  run_management_command.sh
docs/: development.md  inclusion_connect.md  index.md  openid_connect.md  peama.md  saml.md  user_journey.md
inclusion_connect/: logging.py  middleware.py  test.py  tests.py  urls.py  views.py  wsgi.py
inclusion_connect/accounts/: emails.py  forms.py  helpers.py  middleware.py  tests.py  tokens.py  urls.py  views.py
inclusion_connect/admin/: apps.py  sites.py
inclusion_connect/auth/: backends.py  tests.py
inclusion_connect/keycloak_compat/: hashers.py  models.py  tests.py  urls.py  utils.py  views.py
inclusion_connect/oauth_overrides/: views.py
inclusion_connect/oidc_federation/: base.py  (+3 more)
requirements/: base.in  base.txt  deploy.txt  dev.in  dev.txt
scripts/: clean_kc_import.py  deploy_prod.sh  failover_scalingo.sh  import_from_kc.py  import_from_kc_one_user.py  import_from_kc_with_unconfirmed_email.py  migrate-users-to-scalingo.py
tests/: asserts.py  conftest.py  helpers.py  test_admin.py  test_builtin_views.py  test_cron.py  test_functional.py  test_homepage.py  test_logging.py  test_security.py  test_stats.py  test_template_tags.py  tests_functional.py
(+159 files in other folders)
